# bunshin-ai

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  bunshin.spec  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build-desktop.yml  ci.yml  deploy-landing.yml
docs/: ARCHITECTURE.md  CLEANUP.md  CODE_SIGNING.md  COMMANDS.md  FOR_FRIENDS.md  RELEASE_HIGHLIGHTS.md  SETUP.md  TAGLINE.md  TROUBLESHOOTING.md
docs/landing/: CNAME  README.md  index.html
docs/screenshots/: README.md
electron-app/: package-lock.json  package.json
electron-app/i18n/: en.json  ja.json
electron-app/scripts/: after-pack.js  build-icon.js
electron-app/src/: main.js  preload.js  splash.html
scripts/: build-demo-gif.sh  build.sh  lint_index_html.py  publish_release.sh  release.sh
src/bunshin/: __init__.py  __main__.py  backup.py  chat.py  chat_history.py  cli.py  embeddings.py  file_watcher.py  insights.py  knowledge_graph.py  photos_clusters.py  rerank.py  scheduler.py  search.py  settings.py  signals.py  storage.py
src/bunshin/ingestion/: audio.py  (+12 more)
tauri-app/: package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tests/: conftest.py  test_chunking.py  test_doctor_json.py  test_entity_hygiene.py  test_imessage.py  test_insights.py  test_knowledge_graph.py  test_notes.py  test_pdf_ocr.py  test_photos_place_regex.py  test_pin_surfacing.py  test_scheduler.py  test_storage.py
(+3 files in other folders)
