[project]
name = "bunshin"
version = "0.9.0"
description = "Personal memory engine: local-first, AI-agnostic, offline-capable, omni-source"
requires-python = ">=3.10"
authors = [
    {name = "Bunshin Contributors"},
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "fastembed>=0.3.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.24.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "mcp>=1.0.0",
    "icalendar>=5.0.0",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
local = [
    "ollama>=0.1.0",
]
cloud = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bunshin = "bunshin.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
